--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,34 +111,26 @@
 		margin: 2px;
 	}
 	
-	.picgrid {
+	.row {
 		display: flex;
-		flex-wrap: wrap;
-		background-color: DodgerBlue;
-		height:100px;
-		weight:100px;
-		}
-
-	.picgrid > div {
-		background-color: #f1f1f1;
-		width: 100px;
-		margin: 10px;
-		text-align: center;
-		line-height: 75px;
-		font-size: 30px;
-		height:100px;
-		weight:100px;
-		}
-	
 		
-	
+	}
 
 
-
-
-
-
-
+	.column {
+		flex: 40%;
+		padding: 0;
+		max-width:40%;
+		padding:0;
+		
+		
+	}
+	.column img{
+		width:10%;
+		
+		
+		
+	}
 
 
 
