--- a/stylesheet.css
+++ b/stylesheet.css
@@ -72,6 +72,7 @@
 		text-decoration:none; 
 		color:#FFFFFF;
 		text-transform: uppercase;
+		font-family:arial;
 	}
 		
 	.games 
@@ -156,6 +157,8 @@
 	{
 	  display: flex;
 	  flex-wrap: wrap;
+	  
+	  
 			  
 	}
 
@@ -164,12 +167,17 @@
 	  background-color: #f1f1f1;
 	  width: 100px;
 	  margin: 10px;	 
-	  line-height: 75px;
+	  max-height:70px;	  
+	  flex-direction:column;
 	}
+	
+	
 	  
 	.flex-container img
 	{	
 		height:100%;
+		position:relative;
+		top:-0px;
 	}
 	
 	input
@@ -177,6 +185,7 @@
 		width:500px;
 		padding:10px;	
 		border: 1px solid #7d7d7d;	
+		
 		
 	}
 	
@@ -210,9 +219,16 @@
 	.butt
 	{
 		position:relative;
-		right:-190px;		
-	}
+		right:-75px;
+		top:-10px;
+		background-color:#379cff;
+		width:520px;
+		margin:20px;
 		
+	}
+	
+	
+	
 	
 	
 	
