--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,8 +28,8 @@
 		align-items: center;
 		text-transform: uppercase;
 		font-size: 3em;
-		font-family: Arial;
-		font-family: Cocogoose Pro;		
+		font-family: Times New Roman, Times, serif;
+		font-family: Arial, Helvetica, sans-serif;		
 		text-shadow:-1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 		
     }
@@ -67,8 +67,8 @@
 		text-decoration:none; 
 		color:#FFFFFF;
 		text-transform: uppercase;
-		font-family:Times New Roman;
-		font-family:arial;
+		font-family:Times New Roman, Times, serif;
+		font-family:Arial, Helvetica, sans-serif;
 		
 		
 	}
@@ -76,15 +76,14 @@
 	.games 
 	{
 		font-size: 3em;
-		font-family: Times New Roman;
-		font-family: Arial;
+		font-family: Times New Roman, Times, serif;
+		font-family: Arial, Helvetica, sans-serif;
 		font-weight: 10;
 		color: #FFFFFF;
 		text-align: center;
 		background-color: #2699FB;
-		margin:0;		
-		padding:10px 315px;
-		width: 30%;
+		margin:0;				
+		padding:10px;
 		text-transform: uppercase;
 		position: static;		
 	}
@@ -118,15 +117,13 @@
 		color: #FFFFFF;
 		text-align: center;
 		margin: 2px;
-	}
-	
-	
+	}	
 	
 	h3
 	{
 		font-size:2em;
-		font-family:Times New Roman;
-		font-family:Arial;
+		font-family:Times New Roman, Times, serif;
+		font-family:Arial, Helvetica, sans-serif;
 		font-weight: 10;
 		color:#707070;
 		background-color:#F5F5F5;
@@ -147,26 +144,20 @@
 		border:none;	
 	}
 	
-	
-
-	
 	select
 	{
 		width: 50%;		
 		margin: auto;
 		float: right;
 		position: relative;
-		top:-12px;
-		
-		
+		top:-12px;	
 	}
+	
 	.flex-container 
 	{
 	  display: flex;
 	  flex-wrap: wrap;
-	  background-color: #FFFFFF;
-	  
-			  
+	  background-color: #FFFFFF;			  
 	}
 
 	.flex-container > span
@@ -187,9 +178,7 @@
 	{
 		width:500px;
 		padding:10px;	
-		border: 1px solid #7d7d7d;	
-		
-		
+		border: 1px solid #7d7d7d;			
 	}
 	
 	textarea
@@ -197,6 +186,8 @@
 		width: 500px;
 		padding:10px;
 		border: 1px solid #7d7d7d;
+		font-family:font-family: Times New Roman, Times, serif;
+		font-family: Arial, Helvetica, sans-serif;	
 	}
 	
 	label
@@ -204,11 +195,10 @@
 		text-align:left;
 		position:relative;
 		left:-213px;
-		font-family: Times New Roman;
-		font-family: Arial;		
+		font-family: Times New Roman, Times, serif;
+		font-family: Arial, Helvetica, sans-serif;		
 		font-size:90%;
-		color:#707070;
-		
+		color:#707070;		
 	}
 	
 	.fir
@@ -219,8 +209,8 @@
 		left:-10px;
 		bottom:-7px;	
 		background-color:#FFFFFF;
-		font-family: Times New Roman;
-		font-family:Arial;
+		font-family: Times New Roman, Times, serif;
+		font-family:Arial, Helvetica, sans-serif;
 	}
 	
 	#butt
@@ -232,9 +222,8 @@
 		background-color:#2699FB;
 		width:523px;
 		color:#FFFFFF;
-		font-family:Times New Roman;
-		font-family:Arial;
-		
+		font-family:Times New Roman, Times, serif;
+		font-family:Arial, Helvetica, sans-serif;		
 	}
 	
 	#backvid
