--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,8 @@
 
-	
+	/*adding the background image when video doesn't show up, no repeat the image and centeralizing content*/
 	body 
 	{
-		background:url(img/background.jpeg);		
+		background:url(../img/background.jpeg);		
 		background-repeat: no-repeat;
 		max-width: 900px;
 		margin:auto;		
@@ -11,7 +11,7 @@
    /*adding company image and alignment*/
 	header
 	{
-		background:url(img/companylogoBG.jpg);	
+		background:url(../img/companylogoBG.jpg);	
 		background-position:center;
 		height: 200px;
 		width: 100%;		
@@ -30,11 +30,10 @@
 		font-size: 3em;
 		font-family: Times New Roman, Times, serif;
 		font-family: Arial, Helvetica, sans-serif;		
-		text-shadow:-1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
-		
+		text-shadow:-1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;		
     }
 		 
-		 
+	/*naviagation bar unordered list with no styling*/	 
     #nav
 	{
 		width:95.5%;
@@ -46,7 +45,7 @@
 		justify-content: center;
 	}
 	
-	
+	/*floating to the left then ceteralizing it*/
 	#nav li 
 	{
 		float:left;
@@ -58,6 +57,7 @@
 		
 	}
 	
+	/*no text decoration for naviagation bar and setting font family and fallback font*/
 	#nav a 
 	{
 		display:block;
@@ -71,7 +71,8 @@
 		
 		
 	}
-		
+	
+	/*all the headers with background blue "we are entertainment and similar headings" and trasforming them to uppercase*/
 	.games 
 	{
 		font-size: 3em;
@@ -86,8 +87,8 @@
 		text-transform: uppercase;
 		position: static;		
 	}
-		
-		
+	
+	/*locking all images into a box so that all images look the same resolutions and aspect ratio*/	
 	figure
 	{
 		width:100%;
@@ -97,6 +98,7 @@
 		margin: 0;			
     }
 		
+	/*locking the aspect ratio and resolutions*/
 	img	
 	{
 		width: 100%;		
@@ -108,6 +110,7 @@
 		bottom: -100%;		
 	}
 	
+	/*footer of each page*/
 	footer
 	{
 		width:100%;
@@ -118,6 +121,7 @@
 		margin: 2px;
 	}	
 	
+	/*"More information" heading style and color and postioning*/
 	h3
 	{
 		font-size:2em;
@@ -131,11 +135,13 @@
 		padding:20px;
 	}
 	
+	/* fixing form background color*/
 	form
 	{
 		background-color:#F5F5F5;
 	}
-
+	
+	/*fixing the width of all the fields and margin and no border*/
 	fieldset
 	{
 		width: 500px;
@@ -143,6 +149,7 @@
 		border:none;	
 	}
 	
+	/*"general requirements drop box" width at constant 50% and float to the right of the field */
 	select
 	{
 		width: 50%;		
@@ -152,20 +159,23 @@
 		top:-12px;	
 	}
 	
+	/*container for each image and wrapping styles*/
 	.flex-container 
 	{
 	  display: flex;
 	  flex-wrap: wrap;
 	  background-color: #FFFFFF;			  
 	}
-
+	
+	/*selecting each image and fixes the height and width of each image in the flexbox*/
 	.flex-container > span
 	{	  
 	  width: 280px;
 	  margin: 10px;	 
 	  max-height:195px;	  	 
 	}	
-	  
+	 
+	 /*filling out the container with the image*/
 	.flex-container img
 	{	
 		height:100%;
@@ -173,6 +183,7 @@
 		top:-0px;
 	}
 	
+	/*adding border to the fields in the contact page*/
 	input
 	{
 		width:500px;
@@ -180,6 +191,7 @@
 		border: 1px solid #7d7d7d;			
 	}
 	
+	/*font family and size for the fonts of the placeholder in the fields*/
 	textarea
 	{
 		width: 500px;
@@ -189,6 +201,7 @@
 		font-family: Arial, Helvetica, sans-serif;	
 	}
 	
+	/*Fixing the label in the first field "select topic" and adding color and sizing and alignment*/
 	label
 	{	
 		text-align:left;
@@ -200,6 +213,7 @@
 		color:#707070;		
 	}
 	
+	/*the field of label is the same color and position and size as the other fields*/
 	.fir
 	{		
 		padding:10px 222px;
@@ -212,6 +226,7 @@
 		font-family:Arial, Helvetica, sans-serif;
 	}
 	
+	/*adding color,postioning and padding to the button*/
 	#butt
 	{
 		position:relative;		
@@ -225,6 +240,7 @@
 		font-family:Arial, Helvetica, sans-serif;		
 	}
 	
+	/*the background video and sent backwards*/
 	#backvid
 	{
 		position: fixed;
@@ -235,12 +251,22 @@
 		z-index:-1;
 	}
 	
+	/*media queries for the company name header when smaller than 960*/
+	@media only screen and (max-width: 960px) 
+	{
+		
+	header
+	{
+		font-size:2em;		
+	}
 	
+	/*removing video when smaller than desktop resolution*/
+	#backvid
+	{
+		display:none;
+	}
 	
-	
-	
-	
-	
+	}
 	
 	
 	
