--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -78,7 +78,7 @@
 		font-size: 3em;
 		font-family: Times New Roman, Times, serif;
 		font-family: Arial, Helvetica, sans-serif;
-		font-weight: lighter;
+		font-weight: normal;
 		color: #FFFFFF;
 		text-align: center;
 		background-color: #2699FB;
@@ -127,7 +127,7 @@
 		font-size:2em;
 		font-family:Times New Roman, Times, serif;
 		font-family:Arial, Helvetica, sans-serif;
-		font-weight: lighter;
+		font-weight: normal;
 		color:#707070;
 		background-color:#F5F5F5;
 		height:40px;
